# setup.cfg
[metadata]
name = kiroframe_importer
version = 0.0.9
author = Hystax
description = ML profiling importing tool for Kiroframe
long_description = file: README.md
long_description_content_type = text/markdown
license = "Apache License 2.0"
url = https://my.kiroframe.com/
project_urls=
    Source =
keywords = arcee, ml, kiroframe, mlops
[options]
python_requires = >=3.10, <4
install_requires =
    tqdm==4.67.1
    mlflow==3.3.0
    retrying==1.4.2
packages = find:
package_dir =
    =.
test =
    tox
[options.packages.find]
where = .
exclude =
    tests
[options.entry_points]
console_scripts =
    kiroframe-importer = kiroframe_importer.importer:main
